유저 타입 추가, 반경 구하는중
