# src/routes/middlewares/location/showMyLocation/index.ts
@@ -14,7 +14,7 @@ const showMyLocation = async (
     const data = await User.findOne({
       include: [
         {
-          attributes: ["id", "longitude", "latitude", "createdAt"],
+          attributes: ["id", "location", "createdAt"],
           model: Location,
         },
       ],
@@ -34,14 +34,14 @@ const showMyLocation = async (
         accountId: data.accountId,
         password: data.password,
         name: data.name,
-        isUser: data.isUser,
+        type: data.type,
         createdAt: data.createdAt,
         updatedAt: data.updatedAt,
       },
       location: data.location,
     });
   } catch (error) {
-    next(new CustomError({ name: "Unhandled_Error" }));
+    next(new CustomError({ name: "Database_Error" }));
   }
 };
 
